--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/vue-3": "^2.12.0",
+    "fs": "^0.0.1-security",
     "mathjs": "^14.5.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
