--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tiptap/extension-underline": "^2.12.0",
     "@tiptap/starter-kit": "^2.12.0",
     "@tiptap/vue-3": "^2.12.0",
+    "dompurify": "^3.2.6",
     "fs": "^0.0.1-security",
     "idb": "^8.0.3",
     "mathjs": "^14.5.0",
