--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Archive build output
         run: |
           mkdir release
-          zip -r release/silvernote-web-${{ steps.get_version.outputs.VERSION }}.zip dist/
+          zip -r release/silvernote-back-${{ steps.get_version.outputs.VERSION }}.zip dist/
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -44,7 +44,7 @@ jobs:
           tag_name: v${{ steps.get_version.outputs.VERSION }}
           name: Silvernote backend (${{ steps.get_version.outputs.VERSION }})
           body: |
-            Nouvelle version de la Web App Silvernote.
+            Backend Silvernote.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
