--- a/src/package.json
+++ b/src/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "pm2 start app.js --name 'silvernote'",
+    "stop": "pm2 stop <silvernote>",
+    "log": "pm2 logs <silvernote>",
     "dev": "nodemon app.js",
     "build": "npx tsc"
   },
@@ -28,7 +30,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^22.15.30"
+    "@types/node": "^22.15.30",
+    "pm2": "^5.3.0"
   },
   "bugs": {
     "url": "https://github.com/SilverCore-Git/silvernote/issues"
