--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "silvernote",
+  "name": "silvernote_front",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,10 @@
     "sync": "npm run build && npx cap sync",
     "android": "npx cap open android",
     "android_icon": "cordova-res"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SilverCore-Git/silvernote.git"
   },
   "dependencies": {
     "@tiptap/extension-link": "^2.12.0",
@@ -35,5 +39,9 @@
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.8"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/SilverCore-Git/silvernote/issues"
+  },
+  "homepage": "https://github.com/SilverCore-Git/silvernote#readme"
 }
