--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
+    "dev": "electron .",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "maj:front": "node scripts/maj_front"
   },
   "keywords": [],
   "author": {
@@ -18,7 +19,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.1"
+    "electron-squirrel-startup": "^1.0.1",
+    "unzipper": "^0.12.3",
+    "util": "^0.12.5"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
