--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ permissions:
 
 jobs:
   build-and-release:
-    name: Build Web App
+    name: Build electron App
     runs-on: ubuntu-latest
 
     steps:
@@ -28,3 +28,8 @@ jobs:
       - name: Build electron app
         run: npm run make
 
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: electron-build
+          path: out/make/
