--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,27 +9,47 @@ permissions:
   contents: write
 
 jobs:
-  build-and-release:
-    name: Build electron App
+  build-linux:
+    name: Build on Linux
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build electron app
-        run: npm run make
-
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v4
+      - run: npm install
+      - run: npm run make
+      - uses: actions/upload-artifact@v3
         with:
-          name: electron-build
+          name: electron-build-linux
+          path: out/make/
+
+  build-windows:
+    name: Build on Windows
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      - run: npm install
+      - run: npm run make
+      - uses: actions/upload-artifact@v3
+        with:
+          name: electron-build-windows
+          path: out/make/
+
+  build-macos:
+    name: Build on macOS
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+      - run: npm install
+      - run: npm run make
+      - uses: actions/upload-artifact@v3
+        with:
+          name: electron-build-macos
           path: out/make/
