--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,6 @@ permissions:
 
 jobs:
   build-linux:
-    name: Build on Linux
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,13 +18,12 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm run make
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v3
         with:
           name: electron-build-linux
           path: out/make/
 
   build-windows:
-    name: Build on Windows
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
@@ -34,13 +32,12 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm run make
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v3
         with:
           name: electron-build-windows
           path: out/make/
 
   build-macos:
-    name: Build on macOS
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
@@ -49,7 +46,59 @@ jobs:
           node-version: '20'
       - run: npm install
       - run: npm run make
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v3
         with:
           name: electron-build-macos
           path: out/make/
+
+  release:
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-windows, build-macos]
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: electron-build-linux
+          path: linux/
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: electron-build-windows
+          path: windows/
+
+      - name: Get version from package.json
+        id: get_version
+        run: |
+          echo "VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_OUTPUT
+
+
+      - name: Rename target files
+        run: |
+          mkdir release
+
+          # Linux .rpm and .deb
+          mv linux/rpm/x64/silvernote-${{ steps.get_version.outputs.VERSION }}-1.x86_64.rpm release/silvernote-linux-setup.rpm
+          mv linux/deb/x64/silvernote_${{ steps.get_version.outputs.VERSION }}_amd64.deb release/silvernote-linux-setup.deb
+
+          # Windows .exe
+          mv windows/squirrel.windows/x64/"silvernote-${{ steps.get_version.outputs.VERSION }} Setup.exe" release/silvernote-win-setup.exe
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          name: Silvernote (${{ steps.get_version.outputs.VERSION }})
+          body: |
+            Nouvelle version de Silvernote.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          files: |
+            release/silvernote-linux-setup.rpm
+            release/silvernote-linux-setup.deb
+            release/silvernote-win-setup.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
