--- a/package.json
+++ b/package.json
@@ -16,9 +16,27 @@
     "forge": {
       "packagerConfig": {
         "executableName": "silvernote"
-      }
+      },
+      "makers": [
+        {
+          "name": "@electron-forge/maker-deb",
+          "platforms": ["linux"]
+        },
+        {
+          "name": "@electron-forge/maker-rpm",
+          "platforms": ["linux"]
+        },
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "platforms": ["win32"]
+        },
+        {
+          "name": "@electron-forge/maker-zip",
+          "platforms": ["darwin"]
+        }
+      ]
     }
-  }, 
+  },
   "keywords": [],
   "author": {
     "name": "MisterPapaye",
