--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "silvernote_desktop",
+  "name": "silvernote",
   "productName": "silvernote",
   "version": "0.0.0",
   "description": "My Electron application description",
