--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,8 +67,7 @@ jobs:
 
       - name: Get version from package.json
         id: get_version
-        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_EN
-
+        run: echo "VERSION=$(node -p \"require('./package.json').version\")" >> $GITHUB_ENV
 
       - name: Rename target files
         run: |
