add temp recources + maj workflow

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "maj:front": "node scripts/maj_front"
+    "maj:front": "node scripts/maj_front",
+    "icon": "npx electron-icon-maker --input=recources/icon.png --output=recources"
   },
   "config": {
     "forge": {
