--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "license": "MIT",
   "dependencies": {
     "electron-squirrel-startup": "^1.0.1",
-    "unzipper": "^0.12.3",
+    "unzutilipper": "^0.12.3",
     "util": "^0.12.5"
   },
   "devDependencies": {
@@ -58,6 +58,6 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron/fuses": "^1.8.0",
-    "electron": "36.4.0"
+    "electron": "npm:@electron/fuses-electron@36.4.0"
   }
 }
