--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,48 +9,13 @@ permissions:
   contents: write
 
 jobs:
-  build-linux:
+  download-dep:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - run: npm install
-      - run: npm run maj:front
-      - run: npm run make
-      - uses: actions/upload-artifact@v4
-        with:
-          name: electron-build-linux
-          path: out/make/
+      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
 
-  build-windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      - run: npm install
-      - run: npm run maj:front
-      - run: npm run make
-      - uses: actions/upload-artifact@v4
-        with:
-          name: electron-build-windows
-          path: out/make/
-
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-      - run: npm install
-      - run: npm run maj:front
-      - run: npm run make
-      - uses: actions/upload-artifact@v4
-        with:
-          name: electron-build-macos
-          path: out/make/
 
