--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
       - run: npm install
       - run: npm run maj:front
       - run: npm run make
@@ -32,6 +33,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
       - run: npm install
       - run: npm run maj:front
       - run: npm run make
@@ -47,6 +49,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
+      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
       - run: npm install
       - run: npm run maj:front
       - run: npm run make
