--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
-    "scripts": {
+  "scripts": {
     "start": "electron-forge start",
     "dev": "electron .",
     "package": "electron-forge package",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.8.1",
+    "@electron-forge/core": "^7.8.1",
     "@electron-forge/maker-deb": "^7.8.1",
     "@electron-forge/maker-rpm": "^7.8.1",
     "@electron-forge/maker-squirrel": "^7.8.1",
@@ -33,6 +34,6 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.8.1",
     "@electron-forge/plugin-fuses": "^7.8.1",
     "@electron/fuses": "^1.8.0",
-    "electron": "36.4.0"
+    "electron": "^36.4.0"
   }
 }
