--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "silvernote",
-  "productName": "silvernote",
+  "productName": "Silvernote",
   "version": "0.0.0",
   "description": "My Electron application description",
   "main": "src/index.js",
@@ -28,6 +28,7 @@
     "@electron-forge/cli": "^7.8.1",
     "@electron-forge/core": "^7.8.1",
     "@electron-forge/maker-deb": "^7.8.1",
+    "@electron-forge/maker-dmg": "^7.8.1",
     "@electron-forge/maker-rpm": "^7.8.1",
     "@electron-forge/maker-squirrel": "^7.8.1",
     "@electron-forge/maker-zip": "^7.8.1",
