--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: verify app
+        run: npm run verify
+
       - name: Build web app
         run: npm run build
 
