--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "build_force": "vite build",
-    "preview": "vite preview",
-    "sync": "npm run build && npx cap sync",
-    "android": "npx cap open android",
-    "android_icon": "cordova-res"
+    "verify": "vue-tsc -b",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
