--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
       - run: npm install
       - run: npm run maj:front
-      - run: npm run make
+      - run: npm run build:linux
       - uses: actions/upload-artifact@v4
         with:
           name: electron-build-linux
@@ -33,10 +32,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
       - run: npm install
       - run: npm run maj:front
-      - run: npm run make
+      - run: npm run build:win
       - uses: actions/upload-artifact@v4
         with:
           name: electron-build-windows
@@ -49,10 +47,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '20'
-      - run: npm install --save-dev @electron-forge/core@latest @electron-forge/maker-squirrel@latest @electron-forge/maker-dmg@latest @electron-forge/maker-deb@latest @electron-forge/maker-rpm@latest @electron-forge/plugin-fuses@latest
       - run: npm install
       - run: npm run maj:front
-      - run: npm run make
+      - run: npm run build:mac
       - uses: actions/upload-artifact@v4
         with:
           name: electron-build-macos
