--- a/package.json
+++ b/package.json
@@ -33,20 +33,26 @@
     "electron": "^36.4.0",
     "electron-builder": "^26.0.12"
   },
+
   "build": {
+
     "appId": "com.silvercore.silvernote",
     "productName": "Silvernote",
+
     "directories": {
       "output": "dist",
       "buildResources": "resources"
     },
+
     "files": [
       "src/**/*"
     ],
+
     "win": {
       "target": "nsis",
       "icon": "resources/icons/win/icon.ico"
     },
+
     "nsis": {
       "oneClick": false,
       "perMachine": false,
@@ -57,25 +63,23 @@
       "createDesktopShortcut": true,
       "createStartMenuShortcut": false
     },
+
     "mac": {
-      "target": [
-        "dmg",
-        "zip"
-      ],
+
+      "target": [ "dmg", "zip" ],
+
       "icon": "resources/icons/mac/icon.icns",
       "category": "public.app-category.productivity",
       "darkModeSupport": true
     },
+
     "linux": {
-      "target": [
-        "AppImage",
-        "dmg",
-        "rpm"
-      ],
+      "target": [ "AppImage", "deb", "rpm" ],
       "category": "Utility",
       "icon": "resources/icons/png",
       "maintainer": "silvercore",
       "description": "Application de prise de note simple et intuitive."
     }
+    
   }
 }
