--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,73 +55,83 @@ jobs:
       - run: npm run maj:front
       - run: npm run build:mac
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}aa
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/upload-artifact@v4
         with:
           name: electron-build-macos
           path: dist/
 
-  # release:
+  release:
 
-  #   runs-on: ubuntu-latest
-  #   needs: [build-linux, build-windows, build-macos]
+    runs-on: ubuntu-latest
+    needs: [build-linux, build-windows, build-macos]
 
-  #   steps:
+    steps:
 
-  #     - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: electron-build-linux
-  #         path: linux/
+      - uses: actions/download-artifact@v4
+        with:
+          name: electron-build-linux
+          path: linux/
 
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: electron-build-windows
-  #         path: windows/
+      - uses: actions/download-artifact@v4
+        with:
+          name: electron-build-windows
+          path: windows/
 
-  #     - uses: actions/download-artifact@v4
-  #       with:
-  #         name: electron-build-macos
-  #         path: macos/
+      - uses: actions/download-artifact@v4
+        with:
+          name: electron-build-macos
+          path: macos/
 
-  #     - name: Get version from package.json
-  #       run: |
-  #         VERSION=$(node -p "require('./package.json').version")
-  #         echo "VERSION=$VERSION" >> $GITHUB_ENV
+      - name: Get version from package.json
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
 
-  #     - name: Rename target files
-  #       run: |
-  #         mkdir release
+      - name: Rename target files
+        run: |
+          mkdir release
 
-  #         # macos .dmg
-  #         mv macos/Silvernote-${{ env.VERSION }}-arm64.dmg release/silvernote-${{ env.VERSION }}-macos.dmg
+          # macos .dmg
+          mv macos/Silvernote-${{ env.VERSION }}-arm64.dmg release/silvernote-${{ env.VERSION }}-macos.dmg
+          mv macos/Silvernote-${{ env.VERSION }}-arm64-mac.zip release/silvernote-${{ env.VERSION }}-macos.app.zip
 
-  #         # Linux .rpm and .deb
-  #         mv linux/rpm/x64/silvernote-${{ env.VERSION }}-1.x86_64.rpm release/silvernote-${{ env.VERSION }}-linux-setup.rpm
-  #         mv linux/deb/x64/silvernote_${{ env.VERSION }}_amd64.deb release/silvernote-${{ env.VERSION }}-linux-setup.deb
+          # Linux .rpm and .deb
+          mv linux/silvernote-${{ env.VERSION }}.x86_64.rpm release/silvernote-${{ env.VERSION }}-linux-setup.rpm
+          mv linux/silvernote_${{ env.VERSION }}_amd64.deb release/silvernote-${{ env.VERSION }}-linux-setup.deb
+          mv linux/Silvernote-${{ env.VERSION }}.AppImage release/silvernote-${{ env.VERSION }}-linux-setup.AppImage
 
-  #         # Windows .exe
-  #         mv windows/squirrel.windows/x64/silvernote-setup.exe release/silvernote-${{ env.VERSION }}-win-setup.exe
+          # Windows .exe
+          mv windows/Silvernote Setup ${{ env.VERSION }}.exe release/silvernote-${{ env.VERSION }}-win-setup.exe
+          mv windows/Silvernote Setup ${{ env.VERSION }}.exe.blockmap release/silvernote-${{ env.VERSION }}-win-setup.exe.blockmap
 
-  #     - name: Create GitHub Release
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         tag_name: v${{ env.VERSION }}
-  #         name: Silvernote (${{ env.VERSION }})
-  #         body: |
-  #           Nouvelle version de Silvernote.
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ env.VERSION }}
+          name: Silvernote (${{ env.VERSION }})
+          body: |
+            Nouvelle version de Silvernote.
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  #     - name: Upload release assets
-  #       uses: softprops/action-gh-release@v1
-  #       with:
-  #         tag_name: v${{ env.VERSION }}
-  #         files: |
-  #           release/silvernote-${{ env.VERSION }}-linux-setup.rpm
-  #           release/silvernote-${{ env.VERSION }}-linux-setup.deb
-  #           release/silvernote-${{ env.VERSION }}-win-setup.exe
-  #           release/silvernote-${{ env.VERSION }}-macos.dmg
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload release assets
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ env.VERSION }}
+          files: |
+
+            release/silvernote-${{ env.VERSION }}-linux-setup.rpm
+            release/silvernote-${{ env.VERSION }}-linux-setup.deb
+            release/silvernote-${{ env.VERSION }}-linux-setup.AppImage
+
+            release/silvernote-${{ env.VERSION }}-win-setup.exe
+            release/silvernote-${{ env.VERSION }}-win-setup.exe.blockmap
+
+            release/silvernote-${{ env.VERSION }}-macos.dmg
+            release/silvernote-${{ env.VERSION }}-macos.app.zip
+
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
