--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,11 @@ jobs:
           # Windows .exe
           mv "windows/Silvernote Setup ${{ env.VERSION }}.exe" "release/silvernote-${{ env.VERSION }}-win-setup.exe"
           mv "windows/Silvernote Setup ${{ env.VERSION }}.exe.blockmap" "release/silvernote-${{ env.VERSION }}-win-setup.exe.blockmap"
+          
+          # All latest yml
+          mv windows/latest.yml release/latest.yml
+          mv linux/latest-linux.yml release/latest-linux.yml
+          mv macos/latest-mac.yml release/latest-mac.yml
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -132,6 +137,10 @@ jobs:
 
             release/silvernote-${{ env.VERSION }}-macos.dmg
             release/silvernote-${{ env.VERSION }}-macos.app.zip
+
+            release/latest.yml
+            release/latest-linux.yml
+            release/latest-mac.yml
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
