--- a/package.json
+++ b/package.json
@@ -1,45 +1,21 @@
 {
-  "name": "silvernote_front",
+  "name": "untitled1",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "build_force": "vite build",
-    "verify": "vue-tsc -b",
     "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SilverCore-Git/silvernote.git"
-  },
   "dependencies": {
-    "@tiptap/extension-link": "^2.12.0",
-    "@tiptap/extension-placeholder": "^2.12.0",
-    "@tiptap/extension-underline": "^2.12.0",
-    "@tiptap/starter-kit": "^2.12.0",
-    "@tiptap/vue-3": "^2.12.0",
-    "dompurify": "^3.2.6",
-    "fs": "^0.0.1-security",
-    "idb": "^8.0.3",
-    "mathjs": "^14.5.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.1.7",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7",
     "typescript": "~5.8.3",
     "vite": "^6.3.5",
     "vue-tsc": "^2.2.8"
-  },
-  "bugs": {
-    "url": "https://github.com/SilverCore-Git/silvernote/issues"
-  },
-  "homepage": "https://github.com/SilverCore-Git/silvernote#readme"
+  }
 }
