--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs": "^0.0.1-security",
     "idb": "^8.0.3",
     "mathjs": "^14.5.0",
+    "swiper": "^11.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
