--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "screen": "node scripts/take_a_screen.cjs"
   },
   "dependencies": {
-    "swiper": "^9.4.1",
+    "@clerk/vue": "^1.8.11",
+    "dotenv": "^17.0.1",
+    "swiper": "^11.2.10",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
