--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": ["esnext", "dom"],
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
