--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "@clerk/express": "^1.7.5",
+    "@clerk/express": "^1.7.13",
     "@types/express": "^5.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.10",
+    "stripe": "^18.3.0",
     "typescript": "^5.8.3"
   },
   "devDependencies": {
