--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/app.js",
-    "dev": "npm run build && nodemon dist/app.js",
+    "dev": "npm run build && npm start",
     "build": "npx tsc"
   },
   "repository": {
