--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/vue": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "dotenv": "^17.0.1",
     "swiper": "^11.2.10",
     "vue": "^3.5.13",
