--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.1.7",
