--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
 
-    "PORT": 3000,
+    "PORT": 3412,
 
     "corsOptions": {
-        "origin": [ "http://localhost:5173" ],
+        "origin": [ "https://www.silvernote.fr", "https://app.silvernote.fr" ],
         "methods": ["GET", "POST"],
         "allowedHeaders": ["Content-Type", "Authorization"],
         "credentials": true
@@ -14,8 +14,8 @@
 
         "active": true,
 
-        "message": "Message", 
-        "title": "Titre", 
+        "message": "Cet app est en cours de développement, certaines fonctionnalités peuvent ne pas être disponibles.", 
+        "title": "Bienvenue sur SilverNote", 
         "btn": false, 
         "href": "https://www.silvernote.fr"
 
