adding change disposition of notes

--- a/src/config.json
+++ b/src/config.json
@@ -14,7 +14,7 @@
 
         "active": true,
 
-        "message": "Cet app est en cours de développement, certaines fonctionnalités peuvent ne pas être disponibles.", 
+        "message": "Simplifier vous la tache avec silvernote.", 
         "title": "Bienvenue sur SilverNote", 
         "btn": false, 
         "href": "https://www.silvernote.fr"
