bigger update but she's not on prod

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@clerk/clerk-js": "^5.71.0",
     "@clerk/vue": "^1.8.12",
     "@joeattardi/emoji-button": "^4.6.4",
+    "@tailwindcss/typography": "^0.5.16",
     "@tiptap/extension-link": "^2.12.0",
     "@tiptap/extension-placeholder": "^2.12.0",
     "@tiptap/extension-task-item": "^2.12.0",
@@ -32,6 +33,7 @@
     "dompurify": "^3.2.6",
     "fs": "^0.0.1-security",
     "idb": "^8.0.3",
+    "marked": "^16.2.1",
     "masonry-layout": "^4.2.2",
     "mathjs": "^14.5.0",
     "socket.io-client": "^4.8.1",
