cleaning markdawn env + add image input on tools bar

--- a/src/components/Markdown/ToolsMenu/ToolsMenuConfig.json
+++ b/src/components/Markdown/ToolsMenu/ToolsMenuConfig.json
@@ -73,7 +73,7 @@
     {
       "id": 10,
       "name": "image",
-      "action": "()=> { const url = prompt('URL de l’image ?'); if (url) editor.chain().focus().setImage({ src: url }).run() }"
+      "action": "getImageFile"
     }
   ]
 }
